unpackaged/main/default/objects/Account_Visit__c/Account_Visit__c.object-meta.xml
<CustomObject>
    <label>Account Visit</label>
    <nameField>
        <displayFormat>AV-{00000}</displayFormat>
        <label>Account Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>