unpackaged/main/default/objects/Account_Visit__c/fields/Agreed_Actions__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Actions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agreed Actions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>