unpackaged/main/default/objects/Account_Visit__c/fields/Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Visit</label>
    <type>Date</type>
</CustomField>