unpackaged/main/default/objects/Account_Visit__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purpose of Visit</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>