unpackaged/main/default/objects/Account_Visit__c/fields/Type_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Visit__c</fullName>
    <label>Type of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Visit</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>